# cxbind-examples

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build_wheels.yml
examples/simple/: CMakeLists.txt  pyproject.toml
examples/simple/.cxbind/: simple.yaml
examples/simple/cxb_simple/: __main__.py
examples/simple/tests/: test_simple.py
