[build-system]
requires = ["cxbuild"]
build-backend = "cxbuild.backend"

[project]
name = "cxb_simple"
version = "0.3"
description="A minimal example package (with pybind11)"
readme = "README.md"
authors = [
  { name = "Kurtis Fields", email = "kurtisfields@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["cxb_simple"]

[tool.cxbuild.project]

[tool.cxbuild.extension]
name="cxb_simple._core"
